--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,8 @@
 
 body {
   font-family: sans-serif;
+  background: darkcyan;
 }
 
-.App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: wheat;
-  height: 100vh;
-  flex-direction: column;
-  gap: 3rem;
+#root {
 }
