--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -5,7 +5,6 @@
 .todo-app {
   font-size: 80%;
   padding: 4rem;
-  border-radius: 5rem;
   background: #3451a1;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   color: #fff;
@@ -84,6 +83,7 @@ h2 {
 .button {
   font-size: 14px;
   background: white;
+  color: black;
   border: 1px solid lightgray;
   padding: 6px;
   border-radius: 5px;
