--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -227,3 +227,47 @@ nav ul li:not(:first-child) {
 .toggles-container {
   margin: 2rem 0;
 }
+
+.slide-vertical-enter {
+  transform: translateY(-20px);
+  opacity: 0;
+}
+
+.slide-vertical-enter-active {
+  opacity: 1;
+  transition: all 300ms;
+  transform: translateY(0);
+}
+
+.slide-vertical-exit {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.slide-vertical-exit-active {
+  opacity: 0;
+  transition: all 300ms;
+  transform: translateY(-20px);
+}
+
+.slide-horizontal-enter {
+  transform: translateX(20px);
+  opacity: 0;
+}
+
+.slide-horizontal-enter-active {
+  opacity: 1;
+  transition: all 300ms;
+  transform: translateX(0);
+}
+
+.slide-horizontal-exit {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.slide-horizontal-exit-active {
+  opacity: 0;
+  transition: all 300ms;
+  transform: translateX(20px);
+}
